--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,41 @@
     height: auto;
 }
 .input-div form {
-    margin: 0 10% 0 25%;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
 }
 .input-div input {
-    height: 25px;
-    width: 40%;
+    height: 40px;
+    width: 100%;
     border-radius: 5px;
-    z-index: 0;
+    grid-row: 1/2;
+    grid-column: 2/3;
 }
 .input-div button {
-    height: 31px;
-    width: 15%;
-    margin-left: 1%;
+    height: 30px;
+    width: 60%;
+    z-index: 1000;
+    margin: 10px 20% 10px 20%;
+    background:  #5f5c5c;
+    border-radius: 5px;
+    color: #fff;
+    grid-row: 2/3;
+    grid-column: 2/3;
 }
-
 .research-title {
     font-style: italic;
     color: #504c4c;
+    margin: 0 20% 0 20%;
+    width: auto;
+}
+
+.result-content {
+    margin: 5% 18% 0 18%;
+}
+.item {
+    margin: 5px 0 5px 0;
+    background: #f2f2f2;
+    padding: 2%;
+    border-radius: 10px;
 }
