--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,11 @@
-.container {
-    margin: 5rem 20% 0 20%;
-}
-.haeder{
-    height: auto;
-}
-.input-div form {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 3fr 1fr;
-}
-.input-div input {
-    height: 40px;
-    width: 100%;
-    border-radius: 5px;
-    grid-row: 1/2;
-    grid-column: 2/3;
-}
-.input-div button {
-    height: 30px;
-    width: 60%;
-    z-index: 1000;
-    margin: 10px 20% 10px 20%;
-    background:  #5f5c5c;
-    border-radius: 5px;
-    color: #fff;
-    grid-row: 2/3;
-    grid-column: 2/3;
-}
-.research-title {
-    font-style: italic;
-    color: #504c4c;
-    margin: 0 20% 0 20%;
-    width: auto;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.result-content {
-    margin: 5% 18% 0 18%;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: poppins;
 }
-.item {
-    margin: 5px 0 5px 0;
-    background: #f2f2f2;
-    padding: 2%;
-    border-radius: 10px;
+body {
+    background-color: #f1f1f1;
 }
