--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,58 @@
     box-sizing: border-box;
     font-family: poppins;
 }
+
 body {
     background-color: #f1f1f1;
+}
+
+.logo img {
+    width: 200px;
+}
+
+.logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.logo p {
+    font-size: 20px;
+}
+
+.haeder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 250px;
+    margin: 70px 0;
+    margin-bottom: 90px;
+}
+
+.input-div form {
+    width: 800px;
+    display: flex;
+    /* background-color: #fff; */
+    padding: 20px;
+    border-radius: 6px;
+}
+
+form input {
+    width: calc(100% - 100px);
+    padding: 10px;
+    padding-left: 5px;
+    outline: none;
+    background-color: #f8fafc;
+    border: 1px solid #ccc;
+    border-radius: 10px 0 0 10px;
+}
+
+form button {
+    width: 100px;
+    background-color: #645cff;
+    border: #fff;
+    color: #fff;
+    border-radius: 0 6px 6px 0;
+    cursor: pointer;
 }
