--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
     width: 200px;
 }
 
-.logo {
+.logo, footer {
     display: flex;
     flex-direction: column;
     align-items: center;
